# stitchcraft

./: .gitignore  package-lock.json  package.json
apps/api/: main.py  requirements.txt
apps/api/routers/: export.py  import_.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: StatusBar.tsx
apps/web/src/components/canvas/: CanvasRenderer.ts  DesignCanvas.tsx
apps/web/src/components/panels/: ColorPalette.tsx  LayerPanel.tsx  PropertiesPanel.tsx  StitchInfoPanel.tsx
apps/web/src/components/preview3D/: StitchPreview3D.tsx
apps/web/src/components/shared/: ContextMenu.tsx  ExportDialog.tsx  Icons.tsx  ImportDialog.tsx  LetteringDialog.tsx
apps/web/src/components/toolbar/: DigitizingToolbar.tsx  MainToolbar.tsx
apps/web/src/hooks/: useCanvas.ts  useKeyboardShortcuts.ts
apps/web/src/models/: Design.ts  Hoop.ts  StitchObject.ts  Thread.ts
apps/web/src/services/: exportDST.ts  importDST.ts  letteringGenerator.ts  stitchGenerator.ts  stitchOptimizer.ts
apps/web/src/store/: designStore.ts  toolStore.ts  undoStore.ts  viewStore.ts
crates/stitchcraft-engine/: Cargo.toml
crates/stitchcraft-engine/src/: lib.rs  types.rs
crates/stitchcraft-engine/src/compensation/: mod.rs
crates/stitchcraft-engine/src/fill/: mod.rs  scan_line.rs
crates/stitchcraft-engine/src/geometry/: mod.rs
crates/stitchcraft-engine/src/pathing/: mod.rs
crates/stitchcraft-engine/src/running/: mod.rs
crates/stitchcraft-engine/src/satin/: mod.rs
crates/stitchcraft-engine/src/underlay/: mod.rs
